--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:icon="@mipmap/ic_launcher">
         <provider
             android:name="android.support.v4.content.FileProvider"
-            android:authorities="me.albie.share"
+            android:authorities="me.gatekeeper.share"
             android:exported="false"
             android:grantUriPermissions="true">
             <meta-data
