--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   flutter:
     sdk: flutter
   qrcode_reader: ^0.4.4
+  http: ^0.12.0
   qr_flutter: ^1.1.6
   path_provider: ^0.5.0+1
   google_sign_in: ^4.0.1
