--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -51,7 +51,7 @@ linter:
   - always_specify_types
   - annotate_overrides
   # - avoid_annotating_with_dynamic # conflicts with always_specify_types
-  - avoid_as
+  # - avoid_as
   # - avoid_bool_literals_in_conditional_expressions # not yet tested
   # - avoid_catches_without_on_clauses # we do this commonly
   # - avoid_catching_errors # we do this commonly
@@ -102,7 +102,7 @@ linter:
   - iterable_contains_unrelated_type
   # - join_return_with_assignment # not yet tested
   - library_names
-  - library_prefixes
+  # - library_prefixes
   # - lines_longer_than_80_chars # not yet tested
   - list_remove_unrelated_type
   # - literal_only_boolean_expressions # too many false positives: https://github.com/dart-lang/sdk/issues/34181
