--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   path_provider: ^0.5.0+1
   google_sign_in: ^4.0.1
   url_launcher: ^4.0.3
+  intl: ^0.15.7
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
