--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   google_sign_in: ^4.0.1
   url_launcher: ^4.0.3
   intl: ^0.15.7
+  numberpicker: ^1.0.0
+  firebase_ml_vision: 0.1.2
+  image_picker: 0.4.12+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
