Added qr code uploading Modified icons Added event info page for codes

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:label="gatekeeper"
         android:icon="@mipmap/ic_launcher">
         <provider
-            android:name="android.support.v4.content.FileProvider"
+            android:name="androidx.core.content.FileProvider"
             android:authorities="me.gatekeeper.share"
             android:exported="false"
             android:grantUriPermissions="true">
