--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,8 +23,9 @@ dependencies:
   url_launcher: ^4.0.3
   intl: ^0.15.7
   numberpicker: ^1.0.0
-  firebase_ml_vision: 0.1.2
-  image_picker: 0.4.12+1
+  firebase_ml_vision: ^0.6.0+1
+  image_picker: ^0.5.0+3
+  cloud_firestore: ^0.9.5+2
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
