--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   firebase_ml_vision: ^0.6.0+1
   image_picker: ^0.5.0+3
   cloud_firestore: ^0.9.5+2
+  shared_preferences: ^0.5.1+1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
