--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,12 +18,16 @@ dependencies:
   qrcode_reader: ^0.4.4
   http: ^0.12.0
   qr_flutter: ^1.1.6
+  bubble_bottom_bar: ^1.0.0
+  flutter_spinkit: ^3.1.0
+  crypto: ^2.0.6
+  validators: ^1.0.0+1
   path_provider: ^0.5.0+1
   google_sign_in: ^4.0.1
   url_launcher: ^4.0.3
   intl: ^0.15.7
   numberpicker: ^1.0.0
-  firebase_ml_vision: ^0.6.0+1
+  firebase_ml_vision: ^0.5.1+1
   image_picker: ^0.5.0+3
   cloud_firestore: ^0.9.5+2
   shared_preferences: ^0.5.1+1
