--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="doorman"
+        android:label="Doorman"
         android:icon="@mipmap/ic_launcher">
         <meta-data
             android:name="com.google.firebase.ml.vision.DEPENDENCIES"
