--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -46,10 +46,10 @@ android {
         applicationId "com.anderssundheim.doorman"
         minSdkVersion 21
         targetSdkVersion 28
-        multiDexEnabled true
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
     }
 
     signingConfigs {
@@ -63,6 +63,9 @@ android {
     buildTypes {
         release {
             signingConfig signingConfigs.release
+            ndk {
+                abiFilters 'armeabi-v7a'
+            }
         }
     }
 }
